updated create reuqest payload to add project id
